# prtg-tool

./: .env.example  .gitignore  CLAUDE.md  README.md  design.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/commands/: device.md
prtg/: __init__.py  __main__.py  cli.py  client.py  config.py
prtg/commands/: config.py  device.py  group.py  sensor.py
prtg/formatters/: __init__.py  base.py  json.py
prtg/models/: __init__.py  base.py  device.py  group.py  sensor.py
tests/: __init__.py  test_client.py  test_config.py  test_formatters.py  test_group.py  test_models.py  test_sensor.py
tests/fixtures/: devices.json  groups.json  sensor_historicdata.csv  sensor_historicdata.json  sensors.json
