[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prtg-tool"
version = "0.2.0"
description = "Command-line tool for PRTG Network Monitor API"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "PRTG Tool Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "click",
    "requests",
    "pydantic>=2.12.0,<3.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
]

[project.scripts]
prtg = "prtg.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["prtg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
